--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -108,19 +108,23 @@
 
   q, blockquote {
     quotes: none;
-  }
 
-  q:before, q:after, blockquote:before, blockquote:after {
-    content: "";
-    content: none;
+    q:before, q:after, blockquote:before, blockquote:after {
+      content: "";
+      content: none;
+    }
   }
 
   a img {
     border: none;
   }
 
-  article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+  article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav,  summary {
     display: block;
+  }
+
+  section {
+    display: flow-root;
   }
 
   .clearfix {
@@ -140,7 +144,7 @@
     font: normal 13px/1.4em 'Open Sans', Sans-serif;
     margin: 0 auto;
     min-height: 1158px;
-    background: #F7EDEB url("bg.png") 0 0 no-repeat;
+    //background: #F7EDEB url("bg.png") 0 0 no-repeat;
     background-size: 100% auto;
     color: #5B6165;
     position: relative;
@@ -150,185 +154,191 @@
     padding-top: 50px;
     margin: 0 110px 0 60px;
     height: 115px;
-  }
 
-  #memo .logo {
-    float: left;
-    margin-right: 20px;
-  }
+    .logo {
+      float: left;
+      margin-right: 20px;
 
-  #memo .logo img {
-    width: 150px;
-    height: 100px;
-  }
+      img {
+        width: 150px;
+        height: 100px;
+      }
+    }
 
-  #memo .company-info {
-    float: right;
-    text-align: right;
-  }
+    .company-info {
+      float: right;
+      text-align: right;
 
-  #memo .company-info > div:first-child {
-    line-height: 1em;
-    font-weight: bold;
-    font-size: 22px;
-    color: #B32C39;
-  }
+      > div:first-child {
+        line-height: 1em;
+        font-weight: bold;
+        font-size: 22px;
+        color: #B32C39;
+      }
 
-  #memo .company-info span {
-    font-size: 11px;
-    display: inline-block;
-    min-width: 20px;
-  }
+      span {
+        font-size: 11px;
+        display: inline-block;
+        min-width: 20px;
+      }
+    }
 
-  #memo:after {
-    content: '';
-    display: block;
-    clear: both;
+    :after {
+      content: '';
+      display: block;
+      clear: both;
+    }
   }
 
   #invoice-title-number {
     font-weight: bold;
     margin: 30px 0;
+
+    span {
+      line-height: 0.88em;
+      display: inline-block;
+      min-width: 20px;
+    }
+
+    #title {
+      text-transform: uppercase;
+      padding: 0px 2px 0px 60px;
+      font-size: 50px;
+      background: #F4846F;
+      color: white;
+      margin-left: 22%;
+    }
+
+    #number {
+      margin-left: 10px;
+      font-size: 35px;
+      position: relative;
+      top: -5px;
+    }
   }
 
-  #invoice-title-number span {
-    line-height: 0.88em;
-    display: inline-block;
-    min-width: 20px;
-  }
-
-  #invoice-title-number #title {
-    text-transform: uppercase;
-    padding: 0px 2px 0px 60px;
-    font-size: 50px;
-    background: #F4846F;
-    color: white;
-    margin-left: 22%;
-  }
-
-  #invoice-title-number #number {
-    margin-left: 10px;
-    font-size: 35px;
-    position: relative;
-    top: -5px;
-  }
 
   #client-info {
     float: left;
     margin-left: 60px;
     min-width: 220px;
-  }
 
-  #client-info > div {
-    margin-bottom: 3px;
-    min-width: 20px;
-  }
+    > div {
+      margin-bottom: 3px;
+      min-width: 20px;
+    }
 
-  #client-info span {
-    display: block;
-    min-width: 20px;
-  }
+    span {
+      display: block;
+      min-width: 20px;
+    }
 
-  #client-info > span {
-    text-transform: uppercase;
+    > span {
+      text-transform: uppercase;
+    }
   }
 
   table {
-    //table-layout: fixed;
-  }
-
-  table th, table td {
-    vertical-align: top;
-    word-break: keep-all;
-    word-wrap: break-word;
+    th, table td {
+      vertical-align: top;
+      word-break: keep-all;
+      word-wrap: break-word;
+    }
   }
 
   #items {
     margin: 35px 30px 0 30px;
+
+    .first-cell, #items table th:first-child, #items table td:first-child {
+      //width: 40px !important;
+      //padding-left: 0 !important;
+      //padding-right: 0 !important;
+      //text-align: right;
+    }
+
+    table {
+      border-collapse: separate;
+      width: 100%;
+
+      th {
+        font-weight: bold;
+        padding: 5px 8px;
+        text-align: right;
+        background: #B32C39;
+        color: white;
+        text-transform: uppercase;
+      }
+
+      //th:nth-child(2) {
+      //  width: 30%;
+      //  text-align: left;
+      //}
+      th:last-child {
+        text-align: right;
+      }
+
+      td {
+        padding: 9px 8px;
+        text-align: right;
+        border-bottom: 1px solid #ddd;
+      }
+
+      //#items table td:nth-child(2) {
+      //  text-align: left;
+      //}
+    }
   }
 
-  #items .first-cell, #items table th:first-child, #items table td:first-child {
-    //width: 40px !important;
-    //padding-left: 0 !important;
-    //padding-right: 0 !important;
-    //text-align: right;
+  .sums_project#sums{
+    margin-top: 0;
+    background: none;
+    tr:last-child th, table tr:last-child td {
+      font-size: 15px;
+      font-weight: bold;
+      color: #5B6165;
+    }
   }
 
-  #items table {
-    border-collapse: separate;
-    width: 100%;
-  }
-
-  #items table th {
-    font-weight: bold;
-    padding: 5px 8px;
-    text-align: right;
-    background: #B32C39;
-    color: white;
-    text-transform: uppercase;
-  }
-
-  //#items table th:nth-child(2) {
-  //  width: 30%;
-  //  text-align: left;
-  //}
-
-  #items table th:last-child {
-    text-align: right;
-  }
-
-  #items table td {
-    padding: 9px 8px;
-    text-align: right;
-    border-bottom: 1px solid #ddd;
-  }
-
-  //#items table td:nth-child(2) {
-  //  text-align: left;
-  //}
-
-  #sums {
+  #sums{
     margin: 25px 30px 0 0;
     background: url("total-stripe-firebrick.png") right bottom no-repeat;
-  }
 
-  #sums table {
-    float: right;
-  }
 
-  #sums table tr th, #sums table tr td {
-    min-width: 100px;
-    padding: 9px 8px;
-    text-align: right;
-  }
+    table {
+      float: right;
 
-  #sums table tr th {
-    font-weight: bold;
-    text-align: left;
-    padding-right: 35px;
-  }
+      tr th, tr td {
+        min-width: 100px;
+        padding: 9px 8px;
+        text-align: right;
+      }
 
-  #sums table tr td.last {
-    min-width: 0 !important;
-    max-width: 0 !important;
-    width: 0 !important;
-    padding: 0 !important;
-    border: none !important;
+      tr th {
+        font-weight: bold;
+        text-align: left;
+        padding-right: 35px;
+      }
+
+      tr td.last {
+        min-width: 0 !important;
+        max-width: 0 !important;
+        width: 0 !important;
+        padding: 0 !important;
+        border: none !important;
+      }
+    }
   }
 
   #sums table tr.amount-total th {
     text-transform: uppercase;
   }
-
   #sums table tr.amount-total th, #sums table tr.amount-total td {
     font-size: 15px;
     font-weight: bold;
   }
-
   #sums table tr:last-child th {
     text-transform: uppercase;
   }
-
   #sums table tr:last-child th, #sums table tr:last-child td {
     font-size: 15px;
     font-weight: bold;
@@ -338,43 +348,43 @@
   #invoice-info {
     float: left;
     margin: 50px 40px 0 60px;
-  }
 
-  #invoice-info > div > span {
-    display: inline-block;
-    min-width: 20px;
-    min-height: 18px;
-    margin-bottom: 3px;
-  }
+    > div > span {
+      display: inline-block;
+      min-width: 20px;
+      min-height: 18px;
+      margin-bottom: 3px;
+    }
 
-  #invoice-info > div > span:first-child {
-    color: black;
-  }
+    > div > span:first-child {
+      color: black;
+    }
 
-  #invoice-info > div > span:last-child {
-    color: #aaa;
-  }
+    > div > span:last-child {
+      color: #aaa;
+    }
 
-  #invoice-info:after {
-    content: '';
-    display: block;
-    clear: both;
+    :after {
+      content: '';
+      display: block;
+      clear: both;
+    }
   }
 
   #terms {
     float: left;
     margin-top: 50px;
-  }
 
-  #terms .notes {
-    min-height: 30px;
-    min-width: 50px;
-    color: #B32C39;
-  }
+    .notes {
+      min-height: 30px;
+      min-width: 50px;
+      color: #B32C39;
+    }
 
-  #terms .payment-info div {
-    margin-bottom: 3px;
-    min-width: 20px;
+    .payment-info div {
+      margin-bottom: 3px;
+      min-width: 20px;
+    }
   }
 
   .thank-you {
