--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -3,6 +3,11 @@
     <div class="row">
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
+        <%= form.label t('Project') %>
+        <%= form.select(:project_id, Project.all.collect {|project| [project.name.to_s + ' - ' + project.customer.name, project.id]}, {:include_blank => true}, {class: 'form-control', autocomplete: 'nope'}) %>
+      </div>
+
+      <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Name') %>
         <%= form.text_field :name, class: "form-control", autocomplete: 'nope' %>
       </div>
