--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -4,7 +4,8 @@
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Customer') %>
-        <%= form.select(:customer_id, Customer.all.collect {|customer| [customer.name, customer.id]}, {:include_blank => true}, {class: 'form-control'}) %>
+        <%= form.collection_select :customer_id, Customer.all, :id, :name, {:include_blank => true}, {class: 'form-control'} %>
+
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
@@ -21,12 +22,23 @@
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Wares') %>
-        <%= form.select(:ware_ids, Ware.where(status: 'A facturer').collect {|ware| [ware.ware_name, ware.id]}, {}, {class: 'form-control', autocomplete: 'nope', :multiple => true}) %>
+        <%= form.select(:ware_ids, Ware.where(status: 'A facturer').or(Ware.where(customer_id: if @invoice
+                                                                                                 @invoice.customer
+                                                                                               else
+                                                                                                 -1
+                                                                                               end, project_id: nil))
+            .collect {|ware| [ware.ware_name, ware.id]}, {}, {class: 'form-control', autocomplete: 'nope', :multiple => true}) %>
       </div>
 
       <div class="form-group col-xs-10 col-sm-4 col-md-4 col-lg-2">
         <%= form.label t('Projects') %>
-        <%= form.select(:project_ids, Project.where(status: 'Terminé').collect {|project| [project.name, project.id]}, {}, {class: 'form-control', autocomplete: 'nope', :multiple => true}) %>
+        <%= form.select(:project_ids, Project.where(status: 'Terminé')
+            .or(Project.where(customer_id: if @invoice
+                                             @invoice.customer
+                                           else
+                                             -1
+                                           end))
+            .collect {|project| [project.name, project.id]}, {}, {class: 'form-control', autocomplete: 'nope', :multiple => true}) %>
       </div>
 
       <div class="actions col-xs-10 col-sm-4 col-md-4 col-lg-2 createButton">
