--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -94,9 +94,7 @@
             <table class="table table-hover table-striped">
               <thead class=thead-dark>
               <tr>
-                <th><%= t('Name') %></th>
-                <th><%= t('Quantity') %></th>
-                <th><%= t('Unit price') %></th>
+                <th><%= t('Ware name') %></th>
                 <th><%= t('TVA rate') %></th>
                 <th><%= t('Total gross') %></th>
                 <th><%= t('Total cost') %></th>
@@ -106,9 +104,7 @@
               <tbody>
               <% project.wares.each do |ware| %>
                 <tr data-link="<%= edit_ware_path ware %>">
-                  <td><%= ware.ware_name %></td>
-                  <td><%= ware.quantity %></td>
-                  <td><%= ware.unit_price %></td>
+                  <td><%= ware.quantity.to_s + " " + ware.ware_name %></td>
                   <td><%= ware.tva_rate %></td>
                   <td><%= ware.total_gross %></td>
                   <td><%= ware.total_cost %></td>
@@ -151,9 +147,7 @@
         <table class="table table-hover table-striped ">
           <thead class=thead-dark>
           <tr>
-            <th><%= t('Name') %></th>
-            <th><%= t('Quantity') %></th>
-            <th><%= t('Unit price') %></th>
+            <th><%= t('Ware name') %></th>
             <th><%= t('TVA rate') %></th>
             <th><%= t('Total gross') %></th>
             <th><%= t('Total cost') %></th>
@@ -163,9 +157,7 @@
           <tbody>
           <% @invoice.wares.each do |ware| %>
             <tr data-link="<%= edit_ware_path ware %>">
-              <td><%= ware.ware_name %></td>
-              <td><%= ware.quantity %></td>
-              <td><%= ware.unit_price %></td>
+              <td><%= ware.quantity.to_s + " " + ware.ware_name %></td>
               <td><%= ware.tva_rate %></td>
               <td><%= ware.total_gross %></td>
               <td><%= ware.total_cost %></td>
