--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -45,15 +45,13 @@
       <% @invoices.each do |invoice| %>
         <tr data-link="<%= edit_invoice_path invoice %>">
           <td>
-            <%= if invoice.customer
-                  invoice.customer.name
-                end
-            %>
+            <%= invoice.customer ? invoice.customer.name : '' %>
           </td>
           <td><%= invoice.date %></td>
           <td><%= invoice.status %></td>
-          <td><%= invoice.total_gross %></td>
-          <td><%= invoice.total %></td>
+          <td><%= number_with_precision  invoice.total_gross, :precision => 2 %></td>
+          <td><%= number_with_precision  invoice.total, :precision => 2 %></td>
+
           <td style="padding: 0">
             <%= link_to image_tag("pdf-icon.png", size: "50x50"), invoice_path(invoice.id, :format => :pdf) %>
             <%= link_to invoice, method: :delete, data: {confirm: 'Are you sure?'} do %>
@@ -70,4 +68,3 @@
     <%= render 'invoices/new' %>
   </div>
 </div>
-
