--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -38,7 +38,7 @@
         <th><%= t('Customer') %></th>
         <th><%= t('Status') %></th>
         <th><%= t('Gross cost').to_s + ' (€)' %></th>
-        <th><%= t('Total').to_s + ' (€)'%></th>
+        <th><%= t('Total').to_s + ' (€)' %></th>
         <th colspan="3"></th>
       </tr>
       </thead>
@@ -48,15 +48,10 @@
         <tr data-link="<%= edit_project_path project %>">
           <td><%= project.name %></td>
           <td><%= project.description %></td>
-          <td>
-            <%= if project.customer
-                  project.customer.name
-                end
-            %>
-          </td>
+          <td><%= project.customer ? project.customer.name : nil %></td>
           <td><%= project.status %></td>
-          <td><%= project.total_gross %></td>
-          <td><%= project.total %></td>
+          <td><%= number_with_precision  project.total_gross, :precision => 2 %></td>
+          <td><%= number_with_precision  project.total, :precision => 2 %></td>
           <td>
             <%= link_to project, method: :delete, data: {confirm: 'Are you sure?'} do %>
               <%= image_tag("delete-icon.png", size: "30x30") %>
